# tw-stock-monitor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  state.json
.github/workflows/: hourly-monitor.yml  test.yml
configs/: scoring.yaml
configs/users/: example.yaml  ou.yaml  xiang.yaml
scripts/: run-offline.ps1  run-offline.sh
src/: config_loader.py  indicators.py  main.py  models.py
src/notifications/: discord.py
src/providers/: aggregator.py  finmind.py  fixture.py  fugle.py  http.py  metadata.py  official_events.py
src/reports/: html_report.py
src/scoring/: common.py  company.py  engine.py  events.py  holding.py  industry.py  labels.py  market_environment.py  market_pricing.py  plain_language.py  summary.py
src/state/: manager.py
tests/: test_config_loader.py  test_discord.py  test_engine.py  test_events.py  test_holding.py  test_indicators.py  test_metadata.py  test_plain_language.py  test_state.py
tests/fixtures/: sample_bundle.json  test-user.yaml
